--- a/Awhere/Base.lproj/Main.storyboard
+++ b/Awhere/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,28 +19,22 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="google-campus-building.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="qkU-bZ-wrE">
                                 <rect key="frame" x="0.0" y="0.0" width="435" height="600"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="-77" y="-15" width="517" height="815"/>
+                                </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XZH-5j-QvW">
-                                <rect key="frame" x="187" y="345" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t8M-Qi-5yz">
-                                <rect key="frame" x="104" y="0.0" width="46" height="30"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="getCurrentLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gNN-00-kKM"/>
-                                </connections>
-                            </button>
                             <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.69999999999999984" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="azH-ow-QCh">
-                                <rect key="frame" x="0.0" y="548" width="435" height="52"/>
+                                <rect key="frame" x="0.0" y="548" width="435" height="147"/>
                                 <color key="backgroundColor" red="0.66666666666666663" green="0.12577719215027697" blue="0.051472710841202085" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="-13" y="742" width="435" height="136"/>
+                                </variation>
                             </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="topRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lia-fq-CdH">
+                                <rect key="frame" x="236" y="102" width="184" height="105"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zce-Pp-BCb">
                                 <rect key="frame" x="-31" y="550" width="435" height="50"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="29"/>
@@ -49,25 +44,52 @@
                                 <state key="selected">
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="-17" y="742" width="435" height="50"/>
+                                </variation>
                                 <connections>
                                     <action selector="getWhatsHere:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y3P-Ga-7bV"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="topRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lia-fq-CdH">
-                                <rect key="frame" x="236" y="102" width="184" height="105"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="azH-ow-QCh" secondAttribute="bottom" constant="-78" id="5Wg-nU-mYj"/>
+                            <constraint firstItem="azH-ow-QCh" firstAttribute="centerX" secondItem="zce-Pp-BCb" secondAttribute="centerX" id="AhJ-AF-EfG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zce-Pp-BCb" secondAttribute="bottom" constant="8" id="IH0-27-RQM"/>
+                            <constraint firstAttribute="centerX" secondItem="zce-Pp-BCb" secondAttribute="centerX" id="Uvf-f9-d4P"/>
+                            <constraint firstItem="azH-ow-QCh" firstAttribute="centerY" secondItem="zce-Pp-BCb" secondAttribute="centerY" id="fyL-vq-v3a"/>
+                            <constraint firstAttribute="centerX" secondItem="azH-ow-QCh" secondAttribute="centerX" id="jV2-hm-ANu"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="5Wg-nU-mYj"/>
+                                <exclude reference="AhJ-AF-EfG"/>
+                                <exclude reference="fyL-vq-v3a"/>
+                                <exclude reference="jV2-hm-ANu"/>
+                                <exclude reference="Uvf-f9-d4P"/>
+                                <exclude reference="IH0-27-RQM"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="5Wg-nU-mYj"/>
+                                <include reference="AhJ-AF-EfG"/>
+                                <include reference="fyL-vq-v3a"/>
+                                <include reference="jV2-hm-ANu"/>
+                                <include reference="Uvf-f9-d4P"/>
+                                <include reference="IH0-27-RQM"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="background" destination="qkU-bZ-wrE" id="RnP-ak-N1E"/>
                         <outlet property="imageview1" destination="Lia-fq-CdH" id="6Vw-Ha-J9k"/>
-                        <outlet property="latLable" destination="XZH-5j-QvW" id="KhB-3R-7Ga"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="375" y="241"/>
+            <point key="canvasLocation" x="375" y="240.75"/>
         </scene>
     </scenes>
     <resources>
